--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-image: url("/table.jpg");
+    background-image: url("images\table.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
