--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,9 +2,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-image: url("images\table.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: hsl(116, 95%, 22%);
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
